[tool.poetry]
name = "teacherspyt"
version = "0.1.0"
description = ""
authors = ["Panayotis Manganaris <panos.manganaris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
jupyter = {version = "^1.0.0", optional = true}
pandas = "^1.5.3"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.20.9"
openpyxl = "^3.1.2"

[tool.poetry.extras]
notebook = ["jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
